update: remove page request
