# scca-rest/src/main/generated/swagger-ui/swagger.json
@@ -11,6 +11,8 @@
     }
   },
   "tags" : [ {
+    "name" : "Admin（管理员-用户管理）"
+  }, {
     "name" : "Dashboard信息"
   }, {
     "name" : "EncryptKey MGT（加密管理）"
@@ -22,9 +24,106 @@
     "name" : "Project MGT（项目管理）"
   }, {
     "name" : "Property MGT（配置详细管理）"
+  }, {
+    "name" : "User（用户管理）"
   } ],
   "schemes" : [ "http", "https" ],
   "paths" : {
+    "${scca.rest.context-path}/admin" : {
+      "post" : {
+        "tags" : [ "Admin（管理员-用户管理）" ],
+        "summary" : "Save User / 添加新用户",
+        "description" : "",
+        "operationId" : "saveUser",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/User"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      },
+      "put" : {
+        "tags" : [ "Admin（管理员-用户管理）" ],
+        "summary" : "Update User / 修改用户信息",
+        "description" : "",
+        "operationId" : "updateUser",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/User"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      },
+      "delete" : {
+        "tags" : [ "Admin（管理员-用户管理）" ],
+        "summary" : "Delete User / 删除用户",
+        "description" : "",
+        "operationId" : "deleteUser",
+        "parameters" : [ {
+          "name" : "username",
+          "in" : "query",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      }
+    },
+    "${scca.rest.context-path}/admin/list" : {
+      "get" : {
+        "tags" : [ "Admin（管理员-用户管理）" ],
+        "summary" : "Get User List / 获取用户列表",
+        "description" : "",
+        "operationId" : "getUserList",
+        "parameters" : [ {
+          "name" : "page",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int32"
+        }, {
+          "name" : "size",
+          "in" : "query",
+          "required" : true,
+          "type" : "integer",
+          "format" : "int32"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespPageUserDto"
+            }
+          }
+        }
+      }
+    },
     "${scca.rest.context-path}/dashboard/envSummary" : {
       "get" : {
         "tags" : [ "Dashboard信息" ],
@@ -804,6 +903,70 @@
           }
         }
       }
+    },
+    "${scca.rest.context-path}/user" : {
+      "get" : {
+        "tags" : [ "User（用户管理）" ],
+        "summary" : "Get User / 获取个人信息",
+        "description" : "",
+        "operationId" : "getUser",
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespUserDto"
+            }
+          }
+        }
+      }
+    },
+    "${scca.rest.context-path}/user/nickname" : {
+      "put" : {
+        "tags" : [ "User（用户管理）" ],
+        "summary" : "Update User / 修改昵称",
+        "description" : "",
+        "operationId" : "updateNickname",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/UserParamDto"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      }
+    },
+    "${scca.rest.context-path}/user/password" : {
+      "put" : {
+        "tags" : [ "User（用户管理）" ],
+        "summary" : "Update User / 修改密码",
+        "description" : "",
+        "operationId" : "updatePassword",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/UserParamDto"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/WebRespString"
+            }
+          }
+        }
+      }
     }
   },
   "definitions" : {
@@ -913,6 +1076,86 @@
         }
       }
     },
+    "Page" : {
+      "type" : "object",
+      "properties" : {
+        "totalPages" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "totalElements" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "size" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "content" : {
+          "type" : "array",
+          "items" : {
+            "type" : "object"
+          }
+        },
+        "number" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "sort" : {
+          "$ref" : "#/definitions/Sort"
+        },
+        "first" : {
+          "type" : "boolean"
+        },
+        "last" : {
+          "type" : "boolean"
+        },
+        "numberOfElements" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "PageUserDto" : {
+      "type" : "object",
+      "properties" : {
+        "totalPages" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "totalElements" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "size" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "content" : {
+          "type" : "array",
+          "items" : {
+            "$ref" : "#/definitions/UserDto"
+          }
+        },
+        "number" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "sort" : {
+          "$ref" : "#/definitions/Sort"
+        },
+        "first" : {
+          "type" : "boolean"
+        },
+        "last" : {
+          "type" : "boolean"
+        },
+        "numberOfElements" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
     "ProjectDto" : {
       "type" : "object",
       "properties" : {
@@ -950,6 +1193,63 @@
           "additionalProperties" : {
             "type" : "object"
           }
+        }
+      }
+    },
+    "Sort" : {
+      "type" : "object"
+    },
+    "User" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "username" : {
+          "type" : "string"
+        },
+        "password" : {
+          "type" : "string"
+        },
+        "nickname" : {
+          "type" : "string"
+        },
+        "role" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "UserDto" : {
+      "type" : "object",
+      "properties" : {
+        "username" : {
+          "type" : "string"
+        },
+        "nickname" : {
+          "type" : "string"
+        },
+        "role" : {
+          "type" : "integer",
+          "format" : "int32"
+        }
+      }
+    },
+    "UserParamDto" : {
+      "type" : "object",
+      "properties" : {
+        "username" : {
+          "type" : "string"
+        },
+        "nickname" : {
+          "type" : "string"
+        },
+        "oldPwd" : {
+          "type" : "string"
+        },
+        "newPwd" : {
+          "type" : "string"
         }
       }
     },
@@ -1160,6 +1460,27 @@
         }
       }
     },
+    "WebRespPageUserDto" : {
+      "type" : "object",
+      "properties" : {
+        "code" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "data" : {
+          "$ref" : "#/definitions/PageUserDto"
+        },
+        "message" : {
+          "type" : "string",
+          "description" : "响应消息"
+        },
+        "timestamp" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "时间戳"
+        }
+      }
+    },
     "WebRespProjectDto" : {
       "type" : "object",
       "properties" : {
@@ -1214,6 +1535,27 @@
         },
         "data" : {
           "type" : "string"
+        },
+        "message" : {
+          "type" : "string",
+          "description" : "响应消息"
+        },
+        "timestamp" : {
+          "type" : "integer",
+          "format" : "int64",
+          "description" : "时间戳"
+        }
+      }
+    },
+    "WebRespUserDto" : {
+      "type" : "object",
+      "properties" : {
+        "code" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "data" : {
+          "$ref" : "#/definitions/UserDto"
         },
         "message" : {
           "type" : "string",
